# tango

./: Cargo.toml
assets/: config.default.toml  splash.default.html
examples/: 00-hello-world.toml
src/: main.rs  server.rs
src/cli/: mod.rs
src/control/: client.rs  mod.rs  server.rs
src/server/: worker.rs
tango/: Cargo.toml
tango-cli/: Cargo.toml
tango-cli/src/: main.rs
tango-config/: Cargo.toml
tango-config/src/: lib.rs
tango-control/: Cargo.toml
tango-control/src/: client.rs  lib.rs  server.rs
tango/src/: main.rs
