[package]
name = "tango"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
daemonize = "0.5"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
nng = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dependencies.tarpc]
version = "0.34"
features = [
    "tokio1",
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
    "unix",
]
