[package]
name = "tango-control"
version = "0.1.0"
edition = "2021"

[features]
default = ["server", "client"]
server = []
client = []

[dependencies]
anyhow = "1"
bincode = "1"
futures = "0.3"
once_cell = "1"
serde_json = "1"
tarpc = { version = "0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-bincode",
    "tcp",
    "unix",
] }
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
